--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins:wght@600;900&family=Roboto&family=Slabo+27px&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Merriweather:wght@700&family=Poppins:wght@600;900&family=Roboto&family=Slabo+27px&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Merriweather:wght@700&family=Noto+Sans+JP:wght@200&family=Poppins:wght@600;900&family=Roboto&family=Slabo+27px&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
