--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+// .leftNav{
+//     .phone:hover{
+//         background-color: white;
+//     }
+//     .phone:hover .Detail:nth-child(2) span{
+//         color: black;
+//     }
+//     .phone:hover .icon:nth-child(2) span{
+//         color: black;
+//     }
+// }
